[package]
name = "tremor-tool"
version = "0.8.0"
description = "Tremor CLI Tool"
authors = ["The Tremor Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
async-std = {version = "1.6", features = ["unstable", "attributes"]}
tremor-runtime = { path = "../" }
tremor-script = { path = "../tremor-script" }
tremor-pipeline = { path = "../tremor-pipeline" }
serde_derive = "1"
simd-json = {version = "0.3", features = ["known-key"]}
serde_yaml = "0.8"
clap = { version = "2", features = ["yaml"] }
dirs = "3"
serde = "1"
halfbrown="0.1"
surf = "=2.0.0-alpha.4"
http-types = "2.4"